--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -53,8 +53,8 @@
    <!-- theme stylesheet-->
    <link rel="stylesheet" href="{% static 'css/default.css'}" id="theme-stylesheet">
    <!-- Custom stylesheet - for your changes-->
-   <link rel="stylesheet" href="{% static 'css/custom.css'}">
-   <script src="{% static 'js/main.js'}"> </script>
+   <link rel="stylesheet" href="{% static 'css/custom.css' }">
+   <script src="{% static 'js/main.js' %}"> </script>
 </head>
 
 <body>
