--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -30,8 +30,8 @@
    <!-- fonts -->
    <link href="https://fonts.googleapis.com/css?family=Poppins:400,700|Righteous&display=swap" rel="stylesheet">
    <!-- owl stylesheets -->
-   <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css'}">
-   <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css'}">
+   <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css'%}">
+   <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css'%}">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"
       media="screen">
    <meta charset="utf-8">
@@ -41,20 +41,20 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="robots" content="all,follow">
    <!-- Price Slider Stylesheets -->
-   <link rel="stylesheet" href="{% static 'css/nouislider.css'}">
+   <link rel="stylesheet" href="{% static 'css/nouislider.css'%}">
    <!-- Google fonts - Playfair Display-->
    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700">
    <!-- Google fonts - Poppins-->
    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,400i,700">
    <!-- swiper-->
-   <link rel="stylesheet" href="{% static 'css/swiper.min.css'}">
+   <link rel="stylesheet" href="{% static 'css/swiper.min.css'%}">
    <!-- Magnigic Popup-->
-   <link rel="stylesheet" href="{% static 'css/magnific-popup.css'}">
+   <link rel="stylesheet" href="{% static 'css/magnific-popup.css'%}">
    <!-- theme stylesheet-->
-   <link rel="stylesheet" href="{% static 'css/default.css'}" id="theme-stylesheet">
+   <link rel="stylesheet" href="{% static 'css/default.css'%}" id="theme-stylesheet">
    <!-- Custom stylesheet - for your changes-->
-   <link rel="stylesheet" href="{% static 'css/custom.css'}">
-   <script src="{% static 'js/main.js'}"> </script>
+   <link rel="stylesheet" href="{% static 'css/custom.css'%}">
+   <script src="{% static 'js/main.js'%}"> </script>
 </head>
 
 <body>
