--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -82,12 +82,12 @@
 
                            {% if request.user.is_authenticated %}
                            <li class="nav-item mt-3 mt-lg-0 ml-lg-3 d-lg-none d-xl-inline-block">
-                              <a class="btn btn-danger" href="">Logout</a>
+                              <a class="btn btn-danger" href="{% url 'logout' %}">Logout</a>
                            </li>
 
                            {% else %}
                            <li class="nav-item mt-3 mt-lg-0 ml-lg-3 d-lg-none d-xl-inline-block">
-                              <a class="btn btn-primary" href="">Log in</a>
+                              <a class="btn btn-primary" href="{% url 'login' %}">Login</a>
                            </li>
 
                            {% endif %}
