--- a/blog/templates/blog/login.html
+++ b/blog/templates/blog/login.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
   
 <!-- Mirrored from demo.bootstrapious.com/directory/1-6-1/blog.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 17 Apr 2021 09:21:30 GMT -->
@@ -27,34 +28,35 @@
    </head>
 <body>
     <div class="container-fluid px-3">
+      {% if messages %}
+        <ul class="messages p-0 px-3" style="position: absolute; top: 0; right: 0; z-index: 9999; width: 100%;">
+            {% for message in messages %}
+            <div class="alert alert-{{message.level_tag}} border-2 d-flex align-items-center shadow" role="alert">
+                <div class="bg-{{message.level_tag}} me-3 icon-item"><span
+                        class="{{message.extra_tags}}"></span>
+                </div>
+                <p class="mb-0 flex-1">{{ message }}</p>
+                <button class="btn-close" type="button" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            {% endfor %}
+        </ul>
+        {% endif %}
       <div class="row min-vh-100">
         <div class="col-md-8 col-lg-6 col-xl-5 d-flex align-items-center">
           <div class="w-100 py-5 px-md-5 px-xl-6 position-relative">
            
-            <form class="form-validate">
+            <form class="form-validate" method="POST" action="{% url 'login' %}">
+              {% csrf_token %}
               <div class="form-group">
-                <label class="form-label" for="loginUsername"> Email Address</label>
-                <input class="form-control" name="loginUsername" id="loginUsername" type="email" placeholder="name@address.com" autocomplete="off" required data-msg="Please enter your email">
+                <label class="form-label" for="loginUsername"> Username</label>
+                <input class="form-control" name="loginUsername" id="loginUsername" type="name" placeholder="admin" autocomplete="off" required data-msg="Please enter your Username">
               </div>
-              <div class="form-group mb-4">
-                <div class="row">
-                  <div class="col">
-                    <label class="form-label" for="loginPassword"> Password</label>
-                  </div>
-                  <div class="col-auto"><a class="form-text small" href="#">Forgot password?</a></div>
-                </div>
+              <div class="form-group">
+                <label class="form-label" for="loginUsername"> Password</label>
                 <input class="form-control" name="loginPassword" id="loginPassword" placeholder="Password" type="password" required data-msg="Please enter your password">
-              </div>
-              <div class="form-group mb-4">
-                <div class="custom-control custom-checkbox">
-                  <input class="custom-control-input" id="loginRemember" type="checkbox">
-                  <label class="custom-control-label text-muted" for="loginRemember"> <span class="text-sm">Remember me for 30 days</span></label>
-                </div>
               </div>
               <!-- Submit-->
               <button class="btn btn-lg btn-block btn-primary">Sign in</button>
-             
-              <p class="text-center"><small class="text-muted text-center">Don't have an account yet? <a href="signup.html">Sign Up                </a></small></p>
             </form><a class="close-absolute mr-md-5 mr-xl-6 pt-5" href="index-2.html"> 
               <svg class="svg-icon w-3rem h-3rem">
                 <use xlink:href="#close-1"> </use>
