--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -55,6 +55,10 @@
    <!-- Custom stylesheet - for your changes-->
    <link rel="stylesheet" href="{% static 'css/custom.css'%}">
    <script src="{% static 'js/main.js'%}"> </script>
+
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+   
 </head>
 
 <body>
@@ -113,30 +117,10 @@
       <div class="banner_section layout_padding">
          <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
-               <div class="carousel-item">
-                  <div class="container">
-                     <h1 class="banner_taital">Adventure</h1>
-                     <p class="banner_text">There are many variations of passages of Lorem Ipsum available, but
-                        the
-                        majority have sufferedThere are ma available, but the majority have suffered</p>
-                     <div class="read_bt"><a href="#">Get A Quote</a></div>
-                  </div>
-               </div>
                <div class="carousel-item active">
                   <div class="container">
-                     <h1 class="banner_taital">Adventure</h1>
-                     <p class="banner_text">There are many variations of passages of Lorem Ipsum available, but
-                        the
-                        majority have sufferedThere are ma available, but the majority have suffered</p>
-                     <div class="read_bt"><a href="#">Get A Quote</a></div>
-                  </div>
-               </div>
-               <div class="carousel-item">
-                  <div class="container">
-                     <h1 class="banner_taital">Adventure</h1>
-                     <p class="banner_text">There are many variations of passages of Lorem Ipsum available, but
-                        the
-                        majority have sufferedThere are ma available, but the majority have suffered</p>
+                     <h1 class="banner_taital placeholder-glow placeholder"> </h1>
+                     <p class="banner_text placeholder-glow placeholder"></p>
                      <div class="read_bt"><a href="#">Get A Quote</a></div>
                   </div>
                </div>
