--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -118,7 +118,7 @@
          <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                <div class="carousel-item active">
-                  <div class="container">
+                  <div class="container" style="text-align: center;">
                      <h1 class="banner_taital placeholder-glow placeholder"> </h1>
                      <p class="banner_text placeholder-glow placeholder"></p>
                      <div class="read_bt"><a href="#">Get A Quote</a></div>
