--- a/blog/templates/blog/suggested_blocks.html
+++ b/blog/templates/blog/suggested_blocks.html
@@ -1,6 +1,6 @@
 {% extends "index.html" %}
 
-{% block start %}
+{% block content %}
 
 <section class="py-6">
     <div class="container">
@@ -39,4 +39,4 @@
     </div>
   </section>
   <!-- Footer-->
-  {% endblock %}
+  {% endblock content %}
