--- a/blog/templates/blog/edit_blog.html
+++ b/blog/templates/blog/edit_blog.html
@@ -181,17 +181,17 @@
     
     
     <form method="post" class="mt-5 pt-5 mb-5 pb-5"
-          enctype="multipart/form-data" action="{% url 'add_blog' %}">
+          enctype="multipart/form-data" action="{% url 'edit_blog' blog.id %}">
         {% csrf_token %}
         <div class="row">
             <div class="col-md-12">
                 <label>Enter blog title</label>
-                <input type="text" class="form-control" placeholder="Enter title" name="title">
+                <input type="text" class="form-control" placeholder="Enter title" name="title" value="{{blog.title}}">
             </div>
 
             <div class="col-md-12">
                 <label>Enter blog description</label>
-                <textarea class="form-control" placeholder="Enter description" name="description"></textarea>
+                <textarea class="form-control" placeholder="Enter description" name="description" >{{blog.content}}</textarea>
             </div>
 
             <div class="col-md-12">
@@ -205,7 +205,7 @@
 
         </div>
 
-        <button type="submit" class="btn btn-primary mt-4">Create Blog</button>
+        <button type="submit" class="btn btn-primary mt-4">Edit Blog</button>
 
     </form>
 
