tags and title now diff

--- a/blog/templates/blog/add_blogs.html
+++ b/blog/templates/blog/add_blogs.html
@@ -189,10 +189,18 @@
                 <input type="text" class="form-control" placeholder="Enter title" name="title">
             </div>
 
+            <!-- enter tags -->
+            <div class="col-md-12">
+                <label>Enter blog tags</label>
+                <input type="text" class="form-control" placeholder="Enter tags" name="tags">
+            </div>
+
             <div class="col-md-12">
                 <label>Enter blog description</label>
                 <textarea class="form-control" placeholder="Enter description" name="description"></textarea>
             </div>
+
+            
 
             <div class="col-md-12">
                 {{form.media}}
