--- a/blog/templates/blog/see_blogs.html
+++ b/blog/templates/blog/see_blogs.html
@@ -197,6 +197,8 @@
         <div class="col-xl-8 col-lg-10 mx-auto">
           <div class="text-content">
             <h1 class="mb-4">{{blog.title}}</h1>
+            <!-- show tags in lighter color -->
+            <p class="mb-4" style="color: #999;">Tags: {{blog.tags}}</p>
             <p class="mb-4">{{blog.description}}</p>
             <p class="mb-4">{{blog.content}}</p>
             <p class="mb-4">{{blog.author}}</p>
