--- a/blog/templates/blog/edit_blog.html
+++ b/blog/templates/blog/edit_blog.html
@@ -190,6 +190,11 @@
             </div>
 
             <div class="col-md-12">
+                <label>Enter blog tags</label>
+                <input type="text" class="form-control" placeholder="Enter tags" name="tags" value="{{blog.tags}}">
+            </div>
+
+            <div class="col-md-12">
                 <label>Enter blog description</label>
                 <textarea class="form-control" placeholder="Enter description" name="description" >{{blog.content}}</textarea>
             </div>
