--- a/blog/templates/blog/edit_blog.html
+++ b/blog/templates/blog/edit_blog.html
@@ -1,255 +1,53 @@
-
-
-
-<!DOCTYPE html>
-{% load static %}
-<html lang="en">
-
-<head>
-   <!-- basic -->
-   <meta charset="utf-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <!-- mobile metas -->
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-   <!-- site metas -->
-   <title>Personal Blog</title>
-   <meta name="keywords" content="">
-   <meta name="description" content="">
-   <meta name="author" content="">
-   <!-- bootstrap css -->
-   <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css'%}">
-   <!-- style css -->
-   <link rel="stylesheet" type="text/css" href="{% static 'css/style.css'%}">
-   <!-- Responsive-->
-   <link rel="stylesheet" href="{% static 'css/responsive.css'%}">
-   <!-- fevicon -->
-   <link rel="icon" href="{% static 'images/fevicon.png'%}" type="image/gif" />
-   <!-- Scrollbar Custom CSS -->
-   <link rel="stylesheet" href="{% static 'css/jquery.mCustomScrollbar.min.css'%}">
-   <!-- Tweaks for older IEs-->
-   <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-   <!-- fonts -->
-   <link href="https://fonts.googleapis.com/css?family=Poppins:400,700|Righteous&display=swap" rel="stylesheet">
-   <!-- owl stylesheets -->
-   <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css'%}">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"
-      media="screen">
-   <meta charset="utf-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <title>Directory Theme by Bootstrapious</title>
-   <meta name="description" content="">
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <meta name="robots" content="all,follow">
-   <!-- Price Slider Stylesheets -->
-   <link rel="stylesheet" href="{% static 'css/nouislider.css'%}">
-   <!-- Google fonts - Playfair Display-->
-   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700">
-   <!-- Google fonts - Poppins-->
-   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,400i,700">
-   <!-- swiper-->
-   <link rel="stylesheet" href="{% static 'css/swiper.min.css'%}">
-   <!-- Magnigic Popup-->
-   <link rel="stylesheet" href="{% static 'css/magnific-popup.css'%}">
-   <!-- theme stylesheet-->
-   <link rel="stylesheet" href="{% static 'css/default.css'%}" id="theme-stylesheet">
-
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-
-</head>
-
-<body>
-   <div class="header_section">
-      <div class="header_main">
-         <div class="container-fluid">
-            <div class="logo">
-               <row style="display: inline-flex;">
-                  <div class="col-md-3" style="position: absolute; left: 0px;">
-                     {% if request.user.is_authenticated %}
-                     <li class="nav-item mt-3 mt-lg-0 ml-lg-3 d-lg-none d-xl-inline-block">
-                        <a class="btn btn-info" href="">Add Blogs</a>
-                     </li>
-                     {% endif %}
-                  </div>
-                  <div class="col-md-6">
-                     <a class="navbar-brand py-1" href="/">
-                        <h3 style="color: antiquewhite !important;">Your Personal Blog</h3>
-                     </a>
-                  </div>
-                  <div class="col-md-3" style="position: absolute; right: 0px;">
-                     <div class="" id="">
-
-                        <ul class="navbar-nav ml-auto">
-
-                           {% if request.user.is_authenticated %}
-                           <li class="nav-item mt-3 mt-lg-0 ml-lg-3 d-lg-none d-xl-inline-block">
-                              <a class="btn btn-danger" href="{% url 'logout' %}">Logout</a>
-                           </li>
-
-                           {% else %}
-                           <li class="nav-item mt-3 mt-lg-0 ml-lg-3 d-lg-none d-xl-inline-block">
-                              <a class="btn btn-primary" href="{% url 'login' %}">Login</a>
-                           </li>
-
-                           {% endif %}
-
-                        </ul>
-                     </div>
-                  </div>
-               </row>
-            </div>
-
-            <div class="menu_main">
-               <ul>
-                  <li class="active"><a href="index.html">Home</a></li>
-                  <li><a href="about.html">About</a></li>
-                  <li><a href="services.html">Services</a></li>
-                  <li><a href="blog.html">Blog</a></li>
-                  <li><a href="contact.html">Contact us</a></li>
-               </ul>
-            </div>
+{% extends 'blog/base.html' %}
+{% block content %}
+<div class="container mt-5">
+   <form method="post" class="mt-5 pt-5 mb-5 pb-5" enctype="multipart/form-data" action="{% url 'edit_blog' blog.id %}">
+      {% csrf_token %}
+      <div class="row">
+         <div class="col-md-12">
+            <label>Enter blog title</label>
+            <input type="text" class="form-control" placeholder="Enter title" name="title" value="{{blog.title}}">
          </div>
-      </div>
-      <!-- banner section start -->
-      <div class="banner_section layout_padding">
-         <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-               <div class="carousel-item active">
-                  <div class="container" style="text-align: center;">
-                     <h1 class="banner_taital placeholder-glow placeholder"> </h1>
-                     <p class="banner_text placeholder-glow placeholder"></p>
-                     <div class="read_bt"><a href="#">Loading</a></div>
-                  </div>
-               </div>
-            </div>
+
+         <div class="col-md-12">
+            <label>Enter blog tags</label>
+            <input type="text" class="form-control" placeholder="Enter tags" name="tags" value="{{blog.tags}}">
          </div>
+
+         <div class="col-md-12">
+            <label>Enter blog description</label>
+            <textarea class="form-control" placeholder="Enter description"
+               name="description">{{blog.content}}</textarea>
+         </div>
+
+         <div class="col-md-12">
+            {{form.media}}
+            {{form.as_p}}
+         </div>
+
+         <div class="col-md-12">
+            <input type="file" name="image" class="form-control">
+         </div>
+
       </div>
-      <!-- banner section end -->
-   </div>
 
-   <div class="container mt-5">
+      <button type="submit" class="btn btn-primary mt-4">Edit Blog</button>
 
-    <div class="container-fluid">
-        <!-- <div class="logo"><a href="/"><img src="/media/images/logo.png"></a></div> -->
-        <div class="logo">
-            <row style="display: inline-flex;">
-                <div class="col-md-3" style="
-                position: absolute;
-                left: 0px;
-            " >    
-                    {% if request.user.is_authenticated %}
-                    <li class="nav-item mt-3 mt-lg-0 ml-lg-3 d-lg-none d-xl-inline-block">
-                      <a class="btn btn-info" href="{% url 'add_blog' %}">Add Blogs</a>
-                    </li>
-                    {% endif %}
-                </div>
-                <div class="col-md-6">
-                  <a class="navbar-brand py-1" href="/">
-                    <h3 style="color: black !important;">Your Personal Blog</h3>
-                  </a>
-                </div>
-                <div class="col-md-3" style="
-                position: absolute;
-                right: 0px;
-            " >
-                  <div class="" id="">
-        
-                    <ul class="navbar-nav ml-auto">
-                      
-                      {% if request.user.is_authenticated %}
-                      <li class="nav-item mt-3 mt-lg-0 ml-lg-3 d-lg-none d-xl-inline-block">
-                        <a class="btn btn-danger" href="{% url 'logout' %}">Logout</a>
-                      </li>
-        
-                      {% else %}
-                      <li class="nav-item mt-3 mt-lg-0 ml-lg-3 d-lg-none d-xl-inline-block">
-                        <a class="btn btn-primary" href="{% url 'login' %}">Add Blog</a>
-                      </li>
-        
-                      {% endif %}
-        
-                    </ul>
-                  </div>
-              </div>
-              </row>
-        </div>
-        
-     </div>
-    
-    
-    <form method="post" class="mt-5 pt-5 mb-5 pb-5"
-          enctype="multipart/form-data" action="{% url 'edit_blog' blog.id %}">
-        {% csrf_token %}
-        <div class="row">
-            <div class="col-md-12">
-                <label>Enter blog title</label>
-                <input type="text" class="form-control" placeholder="Enter title" name="title" value="{{blog.title}}">
-            </div>
-
-            <div class="col-md-12">
-                <label>Enter blog tags</label>
-                <input type="text" class="form-control" placeholder="Enter tags" name="tags" value="{{blog.tags}}">
-            </div>
-
-            <div class="col-md-12">
-                <label>Enter blog description</label>
-                <textarea class="form-control" placeholder="Enter description" name="description" >{{blog.content}}</textarea>
-            </div>
-
-            <div class="col-md-12">
-                {{form.media}}
-                {{form.as_p}}
-            </div>
-
-            <div class="col-md-12">
-                <input type="file" name="image" class="form-control" >
-            </div>
-
-        </div>
-
-        <button type="submit" class="btn btn-primary mt-4">Edit Blog</button>
-
-    </form>
+   </form>
 
 </div>
-
-   <div class="footer_section layout_padding">
-      <div class="container">
-         <div class="input_btn_main">
-            <input type="text" class="mail_text" placeholder="Enter your email" name="Enter your email">
-            <div class="subscribe_bt"><a href="#">Subscribe</a></div>
-         </div>
-         <div class="location_main">
-            <div class="call_text"><img src="{% static 'images/call-icon.png'%}"></div>
-            <div class="call_text"><a href="#">Call +92 312-3456789</a></div>
-            <div class="call_text"><img src="{% static 'images/mail-icon.png'%}"></div>
-            <div class="call_text"><a href="#">demo@gmail.com</a></div>
-         </div>
-         <div class="social_icon">
-            <ul>
-               <li><a href="#"><img src="{% static 'images/fb-icon.png'%}"></a></li>
-               <li><a href="#"><img src="{% static 'images/twitter-icon.png'%}"></a></li>
-               <li><a href="#"><img src="{% static 'images/linkedin-icon.png'%}"></a></li>
-               <li><a href="#"><img src="{% static 'images/instagram-icon.png'%}"></a></li>
-            </ul>
-         </div>
-      </div>
-   </div>
 
 </html>
 
 <script>
    //document ready function
-   $(document).ready(function () {  
+   $(document).ready(function () {
       console.log("ready!");
-     $.ajax({
+      $.ajax({
          url: "{% url 'getLatestPosts' %}",
          type: "GET",
          dataType: "json",
-         success: function(data) {
+         success: function (data) {
             console.log(data);
             console.log(data.posts[0].title);
 
@@ -263,9 +61,11 @@
             }
             $('.banner_text').text(content);
             $('.read_bt').html('<a href="">Read More</a>');
-            
-            
+
+
          }
-     })
+      })
    });
 </script>
+
+{% endblock %}
