--- a/blog/templates/blog/login.html
+++ b/blog/templates/blog/login.html
@@ -65,7 +65,7 @@
         </div>
         <div class="col-md-4 col-lg-6 col-xl-7 d-none d-md-block">
           <!-- Image-->
-          <div class="bg-cover h-100 mr-n3" style="background-image: url(https://images.pexels.com/photos/1995730/pexels-photo-1995730.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);"></div>
+          <div class="bg-cover h-100 mr-n3" style="background-image: url(https://habib.edu.pk/wp-content/uploads/2022/11/Qasim-Pasta_DSSE_220.jpg);"></div>
         </div>
       </div>
     </div>
