read more fixed

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -72,7 +72,7 @@
                content = content.substring(0, 150) + '...';
             }
             $('.banner_text').text(content);
-            $('.read_bt').html('<a href="">Read More</a>');
+            $('.read_bt').html('<a href="/see_blogs/' + data.posts[0].id + '">Read More</a>');
             
             
          }
