--- a/blog/templates/blog/see_blogs.html
+++ b/blog/templates/blog/see_blogs.html
@@ -105,7 +105,7 @@
     </div>
   </div>
 
-  <section class="mt-5 pt-5">
+  <section>
     <!-- show an edit button if user is signed in -->
     {% if request.user.is_authenticated %}
     <div class="row">
